--- a/cyclope/apps/medialibrary/templates/medialibrary/flashmovie_detail.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/flashmovie_detail.html
@@ -2,9 +2,9 @@
 {% load i18n %}
 
 {% block media_content %}
-  <div>
+  <div class="flashmovie-detail">
     <object  data="{{ current_object.media_file }}" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=10,0,0,0" type="application/x-shockwave-flash">
-        <param classid="allowScriptAccess" value="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" />
+        <param name="classid" value="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" />
         <param name="allowScriptAccess" value="sameDomain" />
         <param name="allowFullScreen" value="true" />
         <param name="movie" value="{{ current_object.media_file }}" />
