--- a/cyclope/apps/medialibrary/templates/medialibrary/flashmovie_inline_detail.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/flashmovie_inline_detail.html
@@ -2,7 +2,6 @@
 {% load i18n %}
 
 {% block media_content %}
-  <br>
   <div class="flashmovie-inline-detail">
     <object class="center" data="{{ current_object.media_file }}" type="application/x-shockwave-flash">
         <param name="classid" value="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000">
@@ -11,7 +10,7 @@
         <param name="movie" value="{{ current_object.media_file }}" />
         <param name="quality" value="high" />
         <param name="base" value="{{ url_base }}" />
-        <embed class="center" src="{{ current_object.media_file }}" quality="high" allowScriptAccess="sameDomain" allowFullScreen="false" type="application/x-shockwave-flash" pluginspage="http://www.adobe.com/go/getflashplayer_es" base="{{ url_base }}"/>
+        <!--<embed class="center" src="{{ current_object.media_file }}" quality="high" allowScriptAccess="sameDomain" allowFullScreen="false" type="application/x-shockwave-flash" pluginspage="http://www.adobe.com/go/getflashplayer_es" base="{{ url_base }}"/>-->
     </object>
   </div>
 {% endblock %}
