--- a/cyclope/static/themes/cyclope-bootstrap/css/cyclope.less
+++ b/cyclope/static/themes/cyclope-bootstrap/css/cyclope.less
@@ -186,7 +186,8 @@ span.category_title a {
   padding: 10px 0;
   border-bottom: solid 2px #f5f5f5;
 }
-.flashmovie-inline-detail {
+.flashmovie-inline-detail,
+.flashmovie-detail{
   width: 100%;
   height: 550px;
 }
@@ -209,6 +210,28 @@ span.category_title a {
   width: 480px;
   height: 360px;
 }
+/*###  Comments List  ###*/
+.regionview.customcomment.list.comments-list .media-body {
+  width: 100%;
+  display: block;
+  padding: 10px 5px;
+}
+
+.main-block .reply-div,
+.one_column .reply-div{
+  display: inline;
+  float: left;
+  margin: 0 5px 0 0;
+}
+
+#left .reply-div, #right .reply-div{
+  display: block;
+}
+
+#left .comment_reply_link, #right .comment_reply_link {
+    margin: 5px 0;
+}
+
 /* ### teaser labeled icon ### */
 .icon_list_container .title {
   text-align: center;
@@ -316,7 +339,8 @@ td.last_comment {
 .collapsing #form-comment {
   padding: 15px 0;
 }
-#user_comments .comments ul:nth-child(even) {
+#user_comments .comments ul:nth-child(even),
+.comments-list ul:nth-child(even){
   background-color: #f5f5f5;
 }
 .media-list .media {
@@ -415,3 +439,7 @@ footer,
 .categories_hierarchy .title {font-size: 22px; border-top:1px solid; border-bottom:1px solid; font-weight: 600;margin-bottom:10px;}
 .categories_hierarchy > ul {font-size: 18px;}
 .categories_hierarchy .collection_teaser {margin-bottom: 10px;}
+
+
+
+
