--- a/cyclope/static/themes/cyclope-bootstrap/css/cyclope.less
+++ b/cyclope/static/themes/cyclope-bootstrap/css/cyclope.less
@@ -218,7 +218,8 @@ span.category_title a {
   padding: 10px 5px;
 }
 
-.customcomment.list > ul{
+.customcomment.list > ul,
+#user_comments > ul{
   border:solid 4px #f5f5f5;
 }
 
@@ -226,7 +227,7 @@ span.category_title a {
 #right .customcomment.list .media-list > li > .media-left img{
   display: none;
 }
-//prueba
+
 #user_comments .media-list .media{
   width: 100%;
 }
@@ -246,14 +247,11 @@ span.category_title a {
   float: right;
 }
 
-.customcomment.list > ul > li > ul{
+.customcomment.list > ul > li > ul > li,
+#user_comments > ul > li > ul > li{
   background-color: #f7f7f7;
   border: solid 5px white;
-}
-
-.customcomment.list > ul > li > ul > li > ul{
-  background-color: white;
-  border: 0;
+  margin: 0;
 }
 
 .main-block .reply-div,
