MW: import i18n in templates using translations

--- a/cyclope/apps/media_widget/templates/media_widget/media_upload.html
+++ b/cyclope/apps/media_widget/templates/media_widget/media_upload.html
@@ -1,3 +1,4 @@
+{% load i18n %}
 <!-- Upload file to library before embedding it -->
 <form method="POST" action="{% url embed-create %}" enctype="multipart/form-data">
     {% csrf_token %}
