--- a/cyclope/apps/media_widget/templates/media_widget/media_widget.html
+++ b/cyclope/apps/media_widget/templates/media_widget/media_widget.html
@@ -1,4 +1,4 @@
-{% load fb_versions staticfiles %}
+{% load fb_versions staticfiles i18n %}
 <head>
     <!--styles-->
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
