--- a/cyclope/apps/media_widget/templates/media_widget/pagination_footer.html
+++ b/cyclope/apps/media_widget/templates/media_widget/pagination_footer.html
@@ -1,4 +1,4 @@
-{% load staticfiles %}
+{% load staticfiles i18n %}
 
 <div class="row">
     <div class="col-xs-6 text-left" style="margin-top: 6px;">
