--- a/cyclope/apps/media_widget/templates/media_widget/pagination_header.html
+++ b/cyclope/apps/media_widget/templates/media_widget/pagination_header.html
@@ -1,4 +1,4 @@
-{% load pagination_link %}
+{% load pagination_link i18n %}
 
 <div class="row text-center">
     <div class="col-xs-3" style="margin-top: 8px;">
