feat(soundtrack views) improve view + feat(comments block) to add singular and plural statement + feat (source block) to add glyphicon of a link in link

--- a/cyclope/apps/medialibrary/templates/medialibrary/media_player.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/media_player.html
@@ -1,7 +1,5 @@
 {% load i18n staticfiles %}
-
-<!--TODO (Maureen): remove inline JS-->
-
+{# TODO (Maureen): remove inline JS #}
 {% block extra_head %}
 <script src="{% static 'mediaelement/mediaelement-and-player.min.js' %}"></script>
 <link rel="stylesheet" href="{% static 'mediaelement/mediaelementplayer.min.css' %}" type="text/css" />
