Improved style topic detail, site map and static pages

--- a/cyclope/static/themes/cyclope-bootstrap/css/cyclope.less
+++ b/cyclope/static/themes/cyclope-bootstrap/css/cyclope.less
@@ -411,7 +411,8 @@ footer,
 .related_contents li {list-style:none;}
 
 /* Poll */
-.poll .summary {margin-bottom:20px;}
+.poll {margin-bottom:10px;}
+.poll .summary {margin-bottom:10px;}
 #left .poll .summary, #right .poll .summary {font-size:12px;}
 #left .poll .control-label, #right .poll .control-label {font-size:12px;}
 #left .poll .controls, #right .poll .controls {font-size:12px;}
@@ -425,3 +426,13 @@ footer,
 #left .poll .radio input[type="radio"], #right .poll .radio input[type="radio"],
 #left .poll .radio-inline input[type="radio"], #right .poll .radio-inline input[type="radio"] {margin-top:0;}
 .poll_results p {font-weight:700}
+
+/*Static Pages*/
+.staticpage-teaser ul {margin-top:10px;}
+
+/*Site Maps*/
+#map ul {margin:0 0 0 20px;padding:0;list-style:none;}
+#map li {font-weight:700;list-style:circle;}
+#map ul ul {margin:10px 0;}
+#map ul ul ul {margin:0;}
+#map li li {font-weight:400;margin:0 0 0 20px;}
