fix errors in css

--- a/cyclope/static/themes/cyclope-bootstrap/css/cyclope.less
+++ b/cyclope/static/themes/cyclope-bootstrap/css/cyclope.less
@@ -17,6 +17,7 @@ body {
   float: none;
   display: block;
 }
+
 /* collection and Categories default styles */
 .category_description .category_title {
   border-top: 1px solid #000;
@@ -53,10 +54,7 @@ span.category_title a {
 .collection .title {
   margin-bottom: 0;
 }
-.media .date,
-.staticpage .date {
-  font-size: 1em;
-}
+
 .category_description,
 .collection_header {
   overflow: auto;
@@ -97,10 +95,6 @@ span.category_title a {
 }
 .collection .title {
   margin-bottom: 0;
-}
-.media .date,
-.staticpage .date {
-  font-size: 1em;
 }
 /* ### teaser list of Category members ### */
 .teaser .pretitle {
@@ -496,8 +490,8 @@ footer,
 .poll .controls {margin-left:20px;}
 #div_id_captcha .controls {margin-left:0;}
 #div_id_captcha img {margin-top:10px;}
-#left .poll .title, #right .poll .title,  {font-size:18px; font-weight:700;}
-#left .poll .checkbox, #right .poll .checkbox,  {margin:3px 0;}
+#left .poll .title, #right .poll .title{font-size:18px; font-weight:700;}
+#left .poll .checkbox, #right .poll .checkbox{margin:3px 0;}
 #left .poll .checkbox input[type="checkbox"], #right .poll .checkbox input[type="checkbox"],
 #left .poll .checkbox-inline input[type="checkbox"], #right .poll .checkbox-inline input[type="checkbox"],
 #left .poll .radio input[type="radio"], #right .poll .radio input[type="radio"],
