--- a/cyclope/apps/medialibrary/templates/medialibrary/soundtrack_inline_detail.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/soundtrack_inline_detail.html
@@ -1,5 +1,5 @@
 {% extends "medialibrary/medialibrary_base_inline_detail.html" %}
 
-{% block soundtrack_content %}
+{% block media_content %}
     {% include 'medialibrary/media_player.html' %}
 {% endblock %}
