--- a/cyclope/static/themes/cyclope-bootstrap/css/cyclope.less
+++ b/cyclope/static/themes/cyclope-bootstrap/css/cyclope.less
@@ -473,6 +473,11 @@ footer,
   clear: both;
 }
 
+/* ### Movieclip ### */
+.movieclip .teaser_icon_container{
+  display: block;
+}
+
 /*### list of root category of a collection ###*/
 .categories_hierarchy .title {font-size: 22px; border-top:1px solid; border-bottom:1px solid; font-weight: 600;margin-bottom:10px;}
 .categories_hierarchy > ul {font-size: 18px;}
