Improved reset password view standaring summary, title, and button

--- a/cyclope/static/themes/cyclope-bootstrap/css/cyclope.less
+++ b/cyclope/static/themes/cyclope-bootstrap/css/cyclope.less
@@ -287,7 +287,7 @@ span.category_title a {
 #right .teaser_icon_container img, #left .teaser_icon_container img {margin:0 auto; }
 #right .teaser h2.title, #left .teaser h2.title {font-size:18px;font-weight:700;margin-bottom:5px;}
 #right .teaser .summary, #left .teaser .summary {font-size:12px; margin:0;}
-#right .btn:not(.input-group-btn .btn), #left .btn:not(.input-group-btn .btn) {padding: 1px 5px;font-size: 12px;line-height: 1.5;border-radius: 3px;}
+#right .btn, #left .btn {padding: 1px 5px;font-size: 12px;line-height: 1.5;border-radius: 3px;}
 #right .pretitle-container, #left .pretitle-container {font-size:12px;}
 #right .author, #left .author {font-size:12px; margin-top:5px; margin-bottom:5px;}
 #right .teaser_more, #left .teaser_more, #right .contact_more, #left .contact_more {margin:0 0 10px;}
