--- a/cyclope/templates/registration/password_reset_form.html
+++ b/cyclope/templates/registration/password_reset_form.html
@@ -2,10 +2,10 @@
 {% load i18n crispy_forms_tags %}
 
 {% block content %}
-  <h1 class="title">{% trans 'Reset Password' %}</h1>
+  <h2 class="title">{% trans 'Reset Password' %}</h2>
 
   <div class="form_summary">
-      <div class="summary">{% trans "Forgot your password?" %}</div>
+      <h4 class="summary">{% trans "Forgot your password?" %}</h4>
   </div>
   <p>
       {% trans "Enter your e-mail address in the form below and we will send you a link for resetting your password." %}
@@ -14,7 +14,7 @@
     <form action="" method="post" class="uniForm reset_password">{% csrf_token %}
       {{form|crispy}}
       <div class="buttonHolder">
-        <input type="submit" value="{% trans 'Reset Password' %}" >
+        <input class="btn btn-default" type="submit" value="{% trans 'Reset Password' %}" >
       </div>
     </form>
 {% endblock %}
